# hms-detection

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  config.yaml.example  docker-compose.yml  install.sh
.github/workflows/: build.yml
docs/: phase4-mqtt-events.md
yolo_detection_cpp/: CMakeLists.txt  CMakePresets.json
yolo_detection_cpp/services/detection/: CMakeLists.txt
yolo_detection_cpp/services/detection/include/: buffer_service.h  camera_buffer.h  detection_engine.h  detection_worker.h  event_manager.h  event_recorder.h  frame_data.h  gpu_coordinator.h  periodic_snapshot_manager.h  rtsp_capture.h  snapshot_writer.h  vision_client.h
yolo_detection_cpp/services/detection/include/controllers/: detection_controller.h  health_controller.h
yolo_detection_cpp/services/detection/src/: buffer_service.cpp  detection_engine.cpp  detection_worker.cpp  embedding_client.cpp  event_manager.cpp  event_recorder.cpp  main.cpp  periodic_snapshot_manager.cpp  rtsp_capture.cpp  snapshot_writer.cpp  vision_client.cpp
yolo_detection_cpp/services/detection/src/controllers/: detection_controller.cpp  health_controller.cpp
yolo_detection_cpp/services/detection/tests/: buffer_service_test.cpp  camera_buffer_test.cpp  detection_engine_test.cpp  e2e_confidence_gate_test.py  embedding_client_test.cpp  event_manager_test.cpp  frame_pool_test.cpp  gpu_lifecycle_test.cpp  vision_client_test.cpp
yolo_detection_cpp/shared/: CMakeLists.txt
yolo_detection_cpp/shared/config/include/: config_manager.h
yolo_detection_cpp/shared/config/src/: config_manager.cpp
yolo_detection_cpp/shared/config/tests/: config_manager_test.cpp
yolo_detection_cpp/shared/db/include/: event_logger.h
yolo_detection_cpp/shared/db/src/: db_pool.cpp  event_logger.cpp
yolo_detection_cpp/shared/mqtt/src/: mqtt_client.cpp
